<resources>
    <string name="app_name">Blue App</string>
    <string name="pin">PIN</string>
    <string name="user_name">User Name</string>
    <string name="add_service">Add Service</string>
    <string name="analytics">Analytics</string>
    <string name="disable_resident">Disable Resident</string>
    <string name="get_reports">Get Reports</string>
    <string name="get_delivery">Get Delivery</string>
    <string name="username">Username</string>
    <string name="user_id">User ID</string>
    <string name="disable_time">Disable time</string>
    <string name="textview">TextView</string>
    <string name="add_message">Add Message</string>
    <string name="add_resident">Add Resident</string>
    <string name="add_driver">Add Driver</string>
    <string name="user_type">User Type</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_settings">User Settings</string>
    <string name="cancel">Cancel</string>
    <string name="complaint">Complaint</string>
    <string name="tank_status_ok">Status: OK</string>
    <string name="tank_status_warning">Status: Warning!</string>
    <string name="tank_status_critical">Status: Critical</string>
    <string name="resident_activity_title_text">Tank Information</string>

    <string-array name="demandTypes">
        <item>Water</item>
        <item>Sewage</item>
        <item>Water and Sewage</item>
    </string-array>
    <string-array name="waterTankTypes">
        <item>Select Water Tank</item>
        <item>Cylindrical</item>
        <item>Box</item>
        <item>Horizontal Cylinder</item>
    </string-array>
    <string-array name="sewageTankTypes">
        <item>Select Sewage Tank</item>
        <item>Cylindrical</item>
        <item>Box</item>
        <item>Horizontal Cylinder</item>
    </string-array>
    <string-array name="timeEstimate">
        <item>Select a time estimate</item>
        <item>None</item>
        <item>On the way</item>
        <item>Before Break</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Complete</item>
    </string-array>
    <string-array name="times">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="complaintTypes">
        <item>Complaint</item>
        <item>Broken Lights</item>
        <item>Malfunctioning Lights</item>
        <item>No need for call</item>
    </string-array>
    <string-array name="companies">
        <item>KHMB</item>
        <item>KSB</item>
        <item>KRG</item>
        <item>Makivik</item>
    </string-array>
    <string-array name="ManagerHiddenOptions">
        <item>Other features</item>
        <item>Add Resident</item>
        <item>Add Driver</item>
        <item>Disable Resident</item>
        <item>Get Reports</item>
        <item>Set Message</item>
        <item>Analytics</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="report">Report</string>
    <string name="userInfo" />
    <string name="user_pin" />
    <string name="random_pin">Random Pin</string>
    <string name="add">ADD</string>
    <string name="remove">Remove</string>
    <string name="get_all_reports">Get all reports</string>
    <string name="reports_by_company">Reports by company</string>
    <string name="none">None</string>
    <string name="on_the_way">On the Way</string>
    <string name="before_break">Before Break</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="ignore">Ignore</string>
    <string name="delete">Delete</string>
    <string name="house_number">House Number</string>
    <string name="confirm">Confirm</string>
    <string name="message">Message</string>
    <string name="enter">Enter</string>
    <string name="tank_number">Tank Number</string>
    <string name="email_address">Email Address</string>
    <string name="work_list">Work List</string>
    <string name="delivery_list">Delivery List</string>
    <string name="english">English</string>
    <string name="french">Français (Canada)</string>
    <string name="inuktitut">Inuktitut (ᐃᓄᑦᑎᑐᑦ)</string>
    <string name="languages">Languages</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="water">Water</string>
    <string name="sewage">Sewage</string>
    <string name="average_wait_time">Average Wait Time:</string>
    <string name="edit">Edit</string>
    <string name="my_usage">My Usage</string>
    <string name="complete">Complete</string>

    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="showers">Showers</string>
    <string name="dish_washes">Dish Washes</string>
    <string name="estimated_usage">Estimated Usage</string>
    <string name="washes">Washes</string>
    <string name="add_report">Add Report</string>
    <string name="average_wait_previous_month">Average Wait Previous Month:</string>
    <string name="number_of_calls">Number of Calls</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>

    <string name="remember_me">Remember Me</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="remove_driver">Remove Driver</string>
    <string name="remove_resident">Remove Resident</string>
    <string name="time_stamp">"Time stamp: "</string>
    <string name="_resident">"Resident: "</string>
    <string name="houseNum">"House Number: "</string>
    <string name="tank_type">"Tank Type: "</string>
    <string name="time_est">"Time Estimate: "</string>
    <string name="service">"Service: "</string>
    <string name="current_time_estimate">Current Time Estimate</string>
    <string name="no_delivery_scheduled">No Delivery Scheduled</string>
    <string name="reports">Reports</string>
    <string name="usage_type">Usage Type</string>
    <string name="remember_username">Remember Username</string>
    <string name="disable">Disable Resident</string>
    <string name="textview2" />
    <string name="textview3" />
    <string name="textview4" />
    <string name="textview5" />
    <string name="DisableButton">Disable</string>
    <string name="enable">Enable</string>
    <string name="driver">Driver</string>
    <string name="manager">Manager</string>
    <string name="resident">Resident</string>
    <string name="uima">Uima</string>
    <string name="water_remaining_n1000_liters">water_remaining_n1000_liters</string>
    <string name="waterremaining">Water Remaining</string>
    <string name="deleverytype">Delivery Type</string>
    <string name="deliveryestimate">Delivery Estimate</string>

</resources>
