<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/disable_resident"
            android:icon="@drawable/ic_screen_lock_portrait_black_24dp"
            android:title="@string/disable" />
        <item
            android:id="@+id/remove_resident"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/remove_resident" />
        <item
            android:id="@+id/remove_driver"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/remove_driver" />
        <item
            android:id="@+id/reports"
            android:icon="@drawable/report"
            android:title="@string/reports" />
        <item
            android:id="@+id/managerAnalytics"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/analytics" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/languages">

        <menu>
            <item
                android:id="@+id/English"
                android:title="@string/english" />
            <item
                android:id="@+id/French"
                android:title="@string/french" />
            <item
                android:id="@+id/Inuktitut"
                android:title="@string/inuktitut" />
        </menu>

    </item>

</menu>