<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/getDelivery"
            app:srcCompat="@drawable/pinclipart_com_mail_clipart_295687"
            android:title="@string/get_delivery" />
        <item
            android:id="@+id/resAnalytics"
            android:title="@string/analytics" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/languages">

        <menu>
            <item
                android:id="@+id/English"
                android:title="@string/english" />
            <item
                android:id="@+id/French"
                android:title="@string/french" />
            <item
                android:id="@+id/Inuktitut"
                android:title="@string/inuktitut" />
        </menu>

    </item>

</menu>