<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="50">

        <TextView
            android:id="@+id/timeStampTV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/time_stamp" />

        <TextView
            android:id="@+id/residentTV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/_resident" />

        <TextView
            android:id="@+id/houseNumTV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/house_number" />

        <TextView
            android:id="@+id/tankTypeTV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/tank_type" />

        <TextView
            android:id="@+id/timeEstimateTV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/time_est" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="50">

        <TextView
            android:id="@+id/customAdapterTV1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/customAdapterTV2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/textview2" />

        <TextView
            android:id="@+id/customAdapterTV3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/textview3" />

        <TextView
            android:id="@+id/customAdapterTV4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/textview4" />

        <TextView
            android:id="@+id/customAdapterTV5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/textview5" />

    </LinearLayout>



</LinearLayout>