<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/noneDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/none" />

    <Button
        android:id="@+id/onTheWayDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/on_the_way" />

    <Button
        android:id="@+id/beforeBreakDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="190dp"
        android:text="@string/before_break" />

    <Button
        android:id="@+id/todayDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:text="@string/today" />

    <Button
        android:id="@+id/tomorrowDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="330dp"
        android:text="@string/tomorrow" />

    <Button
        android:id="@+id/ignoreDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:text="@string/ignore" />

    <Button
        android:id="@+id/cancelDriverTimeEstimateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cancel" />
</RelativeLayout>