<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/estimatedUseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/estimated_usage"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/dishesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/dish_washes"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/washesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/washes"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/showersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/showers"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center" />

    <Button
        android:id="@+id/updateUseButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/colorLightText" />

    <Button
        android:id="@+id/addUseButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textColor="@color/colorLightText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="470dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@color/colorLightText" />

    <Button
        android:id="@+id/saveUseButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/colorLightText" />


</RelativeLayout>