<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/driverNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/housNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/house_number"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:maxLength="8" />

    <EditText
        android:id="@+id/driverPinEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/pin"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="3"/>

    <Button
        android:id="@+id/pinButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="330dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLightText"
        android:text="@string/random_pin" />

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="330dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLightText"
        android:text="@string/add" />

    <Button
        android:id="@+id/cancelAddUserButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLightText"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/removeUserButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="400dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLightText"
        android:text="@string/remove" />


</RelativeLayout>