<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/UserIDDisableUserEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>


    <EditText
        android:id="@+id/timeDIsableUserEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="287dp"
        android:ems="10"
        android:hint="@string/disable_time"
        android:inputType="number"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/timesDisableUserSpinner"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="348dp"
        android:entries="@array/times" />

    <Button
        android:id="@+id/confirmDisableUserButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/cancelDisableUserButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/disableUserMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="296dp"
        android:text="@string/textview" />

    />
</RelativeLayout>